End of lesson 14

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,9 @@
 <section class="todoapp">
 	<header class="header">
 		<h1>todos</h1>
+    <form id="new-form">
+      <input type="text" class="new-todo" />
+    </form>
 	</header>
 
 	<section class="main">
@@ -12,6 +15,13 @@
 
 <script>
   $(function() {
+
+    $('#new-form').submit(function(event) {
+      event.preventDefault();
+      var textbox = $('.new-todo');
+      console.log("Task: ", textbox.val());
+    });
+
     function taskHtml(task) {
       var checkedStatus = task.done ? "checked" : "";
       var liElement = '<li><div class="view"><input class="toggle" type="checkbox"' +
